add new maps branch

--- a/src/pages/tab-home/tab-home.html
+++ b/src/pages/tab-home/tab-home.html
@@ -55,11 +55,11 @@
         </p>
         Gallery
       </ion-col>
-      <ion-col>
+      <ion-col (click)="showmap()">
         <p>
-          <ion-icon name="camera"></ion-icon>
+          <ion-icon name="map"></ion-icon>
         </p>
-        MENU 3
+        Show Map
       </ion-col>
     </ion-row>
 
