--- a/src/pages/tab-article/tab-article.html
+++ b/src/pages/tab-article/tab-article.html
@@ -8,5 +8,10 @@
 </ion-header>
 
 <ion-content padding>
+  <div style="margin-top:30vh">
+    <h3 text-center>Shake you device</h3>
+    <p text-center>to random lucky number</p>
 
+    <h1 text-center style="font-size:60px">{{randNumber}}</h1>
+  </div>
 </ion-content>
